<resources>
    <string name="app_name">Bazar_appV4</string>
    <string name="profile">Mi perfil </string>
    <string name="shipping">Lista Despachos </string>
    <string name="shipping_map">Mapa Despachos </string>
    <string name="about">Acerca de </string>
    <string name="home">Inicio</string>
    <string name="logout">Salir</string>
    <string name="others">Otros</string>
    <string name="settings">Configuracion</string>
    <string name="support">Soporte</string>
    <string name="verified">Verificado</string>
    <string name="matias_selman">Bazar Chileno</string>
    <string name="loginMessage">Bazar Chileno</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wecolme_back">Bienvenido</string>
    <string name="sign_in">Ingresa para continuar</string>
    <string name="you_email_com">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="passConf">Confirmar Contraseña</string>
    <string name="phone">Telefono</string>
    <string name="name">Nombre</string>
    <string name="createAccount">Ingresa tus datos</string>

    <string name="login_error_no_correo">Email es obligatorio</string>
    <string name="login_error_invalid_correo">Email debe ser válido</string>
    <string name="login_error_no_password">Contraseña es obligatorio</string>
    <string name="login_error_no_nombre">Nombre es obligatorio</string>
    <string name="login_error_no_telefono">Telefono es obligatorio</string>
    <string name="login_error_password_length">Contraseña debe tener más de 8 caracteres</string>
    <string name="login_error_invalid_telefono">Telefono debe ser valido</string>
    <string name="login_error_no_password_equals">Contraseñas deben ser iguales</string>
    <string name="login_error_no_titulo">Titulo es obligatorio</string>
    <string name="login_error_no_cliente">Nombre de cliente es obligatorio</string>
    <string name="login_error_no_descripcion">Descripcion es obligatorio</string>
    <string name="login_error_no_fecha">Fecha es obligatorio</string>
    <string name="login_error_no_direccion">Direccion es obligatorio</string>
    <string name="title_menu_principal">Mis Pedidos de Hoy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order_list">Lista de Pedidos</string>
    <string name="add_order">Agregar Pedido</string>
    <string name="save_order">Guardar Pedido</string>

    <string name="api_key">AIzaSyBc1R82oRWGpn-woMgkxL8j8WQIzS2tIGw</string>
    <string name="filter_date">Filtrar Fecha</string>
    <string name="open_map">Ver en Mapas</string>
</resources>